--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,9 @@
     "ostream": "cpp",
     "iostream": "cpp",
     "__node_handle": "cpp",
-    "ios": "cpp"
+    "ios": "cpp",
+    "chrono": "cpp",
+    "unordered_map": "cpp"
   },
   "C_Cpp.errorSquiggles": "enabled"
 }
