--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,9 @@
     "__node_handle": "cpp",
     "ios": "cpp",
     "chrono": "cpp",
-    "unordered_map": "cpp"
+    "unordered_map": "cpp",
+    "string": "cpp",
+    "iosfwd": "cpp"
   },
   "C_Cpp.errorSquiggles": "enabled"
 }
