--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,9 @@
     "chrono": "cpp",
     "unordered_map": "cpp",
     "string": "cpp",
-    "iosfwd": "cpp"
+    "iosfwd": "cpp",
+    "iterator": "cpp",
+    "vector": "cpp"
   },
   "C_Cpp.errorSquiggles": "enabled"
 }
